# bootcamp-aberto-aovivo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: .airflowignore  airbyte_ingestion_google_sheets.py  airbyte_ingestion_samp_data.py  airbyte_main.py  dag_airbyte.py  dag_airbyte_samp_data.py  dag_dbt.py  dbt_transformation.py  minha_dag.py  minha_teste.py  orquestrador.py  pipeline.py  teste.py
