[project]
name = "bootcamp-aberto-aovivo"
version = "0.1.0"
description = ""
authors = [
    {name = "ds-borges",email = "diego97sousa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "apache-airflow (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
